--- a/my-app/app.json
+++ b/my-app/app.json
@@ -5,6 +5,15 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      ["@react-native-mapbox-gl/maps"]
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
