--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,15 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-mapbox-gl/maps": "^8.5.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-image-viewer-dv": "^1.0.2",
     "react-native": "0.64.3",
+    "react-native-maps": "0.29.4",
+    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-search-bar": "^3.5.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-web": "0.17.1"
   },
