--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.8",
     "expo": "~44.0.0",
     "expo-av": "^10.2.1",
+    "expo-file-system": "^13.1.4",
     "expo-image-picker": "~12.0.1",
     "expo-speech": "^10.1.1",
     "expo-status-bar": "~1.2.0",
