--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@react-native-mapbox-gl/maps": "^8.5.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-av": "^10.2.1",
     "expo-file-system": "^13.1.4",
@@ -25,8 +26,10 @@
     "react-dom": "17.0.1",
     "react-image-viewer-dv": "^1.0.2",
     "react-native": "0.64.3",
+    "react-native-azure-blob-storage": "^2.0.3",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -34,7 +37,8 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-voice": "^0.3.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
